--- a/index.html
+++ b/index.html
@@ -1,276 +1,217 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dachfenster Sachsen</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-<a href="https://wa.me/4915123138079" target="_blank" style="
-position:fixed;
-width:60px;
-height:60px;
-bottom:20px;
-right:20px;
-background-color:#25D366;
-color:white;
-border-radius:50px;
-text-align:center;
-font-size:30px;
-box-shadow: 2px 2px 5px #999;
-z-index:1000;
-display:flex;
-align-items:center;
-justify-content:center;
-text-decoration:none;">
-  💬
-</a>
-  </head>
-  <body>
-    <!-- Navbar mit SVG-Logo und Unternehmensnamen -->
-    <!-- Navbar mit breiterem SVG-Logo -->
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container d-flex align-items-center">
-        <a class="navbar-brand d-flex align-items-center" href="#">
-          <!-- SVG-Logo inline -->
-          <svg width="80" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Logo dachfenster-sachsen.de" class="me-2">
-            <!-- Hintergrund -->
-            <rect width="80" height="50" fill="#222" rx="8" ry="8"/>
-            <!-- Dach -->
-            <polygon points="15,40 40,10 65,40" fill="#4CAF50" />
-            <!-- Fenster -->
-            <rect x="30" y="25" width="20" height="15" fill="#A5D6A7" />
-          </svg>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dachfenster Sachsen</title>
 
-          <!-- Schriftzug -->
-          <span style="font-weight:bold; font-family: Arial, sans-serif; font-size: 1.25rem; color: white;">
-            dachfenster-
-          </span>
-          <span style="font-weight:bold; font-family: Arial, sans-serif; font-size: 1.25rem; color: #4CAF50;">
-            sachsen.de
-          </span>
-        </a>
-      </div>
-    </nav>
-<!-- Content -->
-<!-- Einleitungstext -->
+  <!-- Bootstrap CSS (Version 5) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- WhatsApp Button -->
+  <a href="https://wa.me/4915123138079" target="_blank" style="
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:20px;
+    right:20px;
+    background-color:#25D366;
+    color:white;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    box-shadow: 2px 2px 5px #999;
+    z-index:1000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-decoration:none;">
+    💬
+  </a>
+</head>
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <svg width="80" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Logo dachfenster-sachsen.de" class="me-2">
+        <rect width="80" height="50" fill="#222" rx="8" ry="8"/>
+        <polygon points="15,40 40,10 65,40" fill="#4CAF50" />
+        <rect x="30" y="25" width="20" height="15" fill="#A5D6A7" />
+      </svg>
+      <span class="fw-bold text-white">dachfenster-</span>
+      <span class="fw-bold" style="color:#4CAF50;">sachsen.de</span>
+    </a>
+  </div>
+</nav>
+
+<!-- Einleitung -->
 <section class="container my-5">
   <div class="p-4 bg-light rounded shadow-sm">
     <h2 class="mb-3">Ihr Partner für Dachfenster und fachgerechten Einbau</h2>
-    <p class="mb-3">
-      Ob Neubau oder Austausch – wir liefern und montieren Dachfenster in allen gängigen Maßen. Profitieren Sie von unserer professionellen Beratung und einem schnellen, sauberen Einbau.
-    </p>
-    <p class="mb-3">
-      Wir arbeiten mit <strong>FAKRO</strong>, einem der führenden polnischen Hersteller hochwertiger Dachfenster, zusammen. Vor Ort betreut Sie <strong>Alexander Krisch</strong> als regionaler Ansprechpartner in Sachsen.
-    </p>
-    <p class="mb-0">
-      Unser Service umfasst eine <strong>10-Jahres-Garantie</strong> auf Montage sowie die <strong>kostenfreie Einreichung Ihres BAFA-Förderantrags</strong> – damit Sie nicht nur hochwertige Fenster, sondern auch die bestmögliche Förderung erhalten.
-    </p>
+    <p>Ob Neubau oder Austausch – wir liefern und montieren Dachfenster in allen gängigen Maßen. Profitieren Sie von unserer professionellen Beratung und einem schnellen, sauberen Einbau.</p>
+    <p>Wir arbeiten mit <strong>FAKRO</strong> zusammen. Vor Ort betreut Sie <strong>Alexander Krisch</strong> als Ansprechpartner in Sachsen.</p>
+    <p>Unser Service: <strong>10 Jahre Garantie</strong> auf Montage + <strong>kostenfreie BAFA-Antragstellung</strong>.</p>
   </div>
 </section>
-<div class="container">
+
+<!-- Video -->
+<div class="container mb-5">
   <video width="100%" controls>
-  <source src="intro.mp4" type="video/mp4">
-  Ihr Browser unterstützt das Video-Tag nicht.
-</video>
-        </div>
-<div class="container marketing">
-  <!-- Call-to-Action: 1:1 Dachfenster Austausch -->
+    <source src="intro.mp4" type="video/mp4">
+    Ihr Browser unterstützt das Video-Tag nicht.
+  </video>
+</div>
+
+<!-- Austausch -->
 <section class="bg-light py-5">
   <div class="container text-center">
     <h2 class="fw-bold mb-3">1:1 Austausch Ihrer Dachfenster</h2>
-    <p class="mb-4">
-      Wir ersetzen Ihr altes Dachfenster fachgerecht durch ein neues, passgenaues Modell –
-      schnell, sauber und ohne aufwendige Umbauten. Profitieren Sie von moderner Wärmedämmung,
-      mehr Komfort und einer frischen Optik.
-    </p>
+    <p>Wir ersetzen Ihr altes Dachfenster fachgerecht durch ein passgenaues Modell – schnell, sauber und ohne aufwendige Umbauten.</p>
     <a href="#kontakt" class="btn btn-success btn-lg shadow">
       📏 Jetzt kostenloses Aufmaß vereinbaren
     </a>
   </div>
 </section>
-        <!-- START THE FEATURETTES -->
-        <hr class="featurette-divider">
 
-        <div class="row featurette">
-          <section class="mb-7">
-        <h2>Warum Fakro Dachfenster?</h2>
-        <ul>
-          <li>✅ Hervorragende Wärmedämmung – senkt Heizkosten</li>
-          <li>✅ Modernes Design & hoher Bedienkomfort</li>
-          <li>✅ Vielfältige Größen und Ausführungen</li>
-          <li>✅ Lange Lebensdauer & robuste Verarbeitung</li>
-        </ul>
-      </section>
-          <div class="col-md-5">
-          <img src="2.png" class="img-fluid" alt="Fakro">
-          </div>
-        </div>
+<hr>
 
-        <hr class="featurette-divider">
+<!-- Fakro Vorteile -->
+<div class="container py-5">
+  <div class="row align-items-center">
+    <div class="col-md-7">
+      <h2>Warum Fakro Dachfenster?</h2>
+      <ul>
+        <li>✅ Hervorragende Wärmedämmung</li>
+        <li>✅ Modernes Design & hoher Komfort</li>
+        <li>✅ Vielfältige Größen & Ausführungen</li>
+        <li>✅ Lange Lebensdauer</li>
+      </ul>
+    </div>
+    <div class="col-md-5 text-center">
+      <img src="2.png" class="img-fluid" alt="Fakro Dachfenster">
+    </div>
+  </div>
+</div>
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">Unser Service – Dachfenster-Austausch in Sachsen<span class="text-muted">
-Kostenlose Beratung vor Ort</span></h2>
-            <p class="lead">
-              <ol>
-                <li>Kostenlose Beratung vor Ort</li>
-                <li>Auswahl des passenden Fakro Dachfensters</li>
-                <li>Fachgerechter Ausbau des alten Fensters</li>
-                <li>Präzise Montage des neuen Fakro Dachfensters</li>
-                <li>Entsorgung des alten Fensters</li>
-              </ol>
-              <p>In den meisten Fällen ist der Austausch <strong>innerhalb eines Tages</strong> abgeschlossen.</p>
-            </p>
-          </div>
-          <div class="col-md-5">
-            <img src="1.jpg" class="img-fluid" alt="Alexander Krisch">
-          </div>
+<hr>
 
-        <hr class="featurette-divider">
-        <!-- Angebot -->
-        <div class="container my-5">
-          <div class="card shadow-lg border-0">
-            <div class="card-header bg-dark text-white">
-              <h4 class="mb-0">📄 Musterangebot</h4>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title mb-3">FAKRO Dachfenster-Paket</h5>
+<!-- Service -->
+<div class="container py-5">
+  <div class="row align-items-center">
+    <div class="col-md-7">
+      <h2>Unser Service – Dachfenster-Austausch</h2>
+      <ol>
+        <li>Kostenlose Beratung vor Ort</li>
+        <li>Passendes Fenster auswählen</li>
+        <li>Altes Fenster ausbauen</li>
+        <li>Neues Fenster montieren</li>
+        <li>Entsorgung des Altfensters</li>
+      </ol>
+      <p>In den meisten Fällen <strong>innerhalb eines Tages</strong> abgeschlossen.</p>
+    </div>
+    <div class="col-md-5 text-center">
+      <img src="1.jpg" class="img-fluid" alt="Alexander Krisch">
+    </div>
+  </div>
+</div>
 
-              <!-- Angebotsdetails -->
-              <ul class="list-group mb-3">
-                <li class="list-group-item">3 × FAKRO Klapp-Schwingfenster PPP-V MAX U5 aus Kunststoff weiß, manuell geöffnet, mit U5-3-fach Verglasung</li>
-                <li class="list-group-item">3 × FAKRO Thermo-Eindeckrahmen EHU-AT</li>
-                <li class="list-group-item">3 × FAKRO Folienanschluss-XDP-SET</li>
-                <li class="list-group-item">3 × FAKRO Netzmarkisen AMZ Solar</li>
-                <li class="list-group-item">2 × Fernbedienungen ZRH12</li>
-              </ul>
+<hr>
 
-              <p class="mb-3">
-                Die oben genannten Fenster erfüllen die <strong>BAFA-Anforderungen</strong> (U5 + EHU-AT, Uw = 1,0 W/m²K) und Sie können dafür eine Förderung erhalten.
-              </p>
-
-              <!-- Preise -->
-              <div class="table-responsive mb-3">
-                <table class="table table-bordered">
-                  <tbody>
-                    <tr>
-                      <th scope="row">Gesamtpreis (inkl. 10% Rabatt)</th>
-                      <td><strong>8.262,87 €</strong></td>
-                    </tr>
-                    <tr>
-                      <th scope="row">Förderfähiger Betrag</th>
-                      <td>7.792,66 € <small>(Innenzubehör und Montage davon nicht förderfähig)</small></td>
-                    </tr>
-                    <tr class="table-success">
-                      <th scope="row">Preis nach Förderung* (BAFA 15%)</th>
-                      <td><strong>7.093,97 €</strong></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-
-              <p class="text-muted">
-                *Den BAFA-Antrag reichen wir für Sie <strong>ohne Zusatzkosten</strong> ein.
-              </p>
-
-              <!-- Call to Action -->
-              <a href="#kontakt" class="btn btn-success btn-lg">📩 Jetzt Angebot anfragen</a>
-            </div>
-          </div>
-        </div>
-        <!-- Kontaktformular -->
-        <section id="kontakt" class="py-5 bg-light">
-          <div class="container">
-            <h2 class="text-center fw-bold mb-4">Kontakt & Kostenloses Aufmaß</h2>
-            <p class="text-center mb-5">
-              Haben Sie Fragen oder möchten Sie ein kostenloses Aufmaß vereinbaren?
-              Füllen Sie einfach das Formular aus – wir melden uns schnellstmöglich bei Ihnen.
-            </p>
-
-            <div class="row justify-content-center">
-              <div class="col-lg-8">
-                <form action="send.php" method="post" class="p-4 border rounded bg-white shadow-sm">
-
-                  <!-- Name -->
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Ihr Name *</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Max Mustermann" required>
-                  </div>
-
-                  <!-- E-Mail -->
-                  <div class="mb-3">
-                    <label for="email" class="form-label">E-Mail-Adresse *</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="beispiel@mail.de" required>
-                  </div>
-
-                  <!-- Telefon -->
-                  <div class="mb-3">
-                    <label for="phone" class="form-label">Telefonnummer</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="+49 ...">
-                  </div>
-
-                  <!-- Nachricht -->
-                  <div class="mb-3">
-                    <label for="message" class="form-label">Ihre Nachricht *</label>
-                    <textarea class="form-control" id="message" name="message" rows="4" placeholder="Ihre Nachricht..." required></textarea>
-                  </div>
-
-                  <!-- Datenschutz -->
-                  <div class="form-check mb-4">
-                    <input class="form-check-input" type="checkbox" id="privacy" required>
-                    <label class="form-check-label" for="privacy">
-                      Ich stimme der <a href="/datenschutz" target="_blank">Datenschutzerklärung</a> zu.
-                    </label>
-                  </div>
-
-                  <!-- Absenden -->
-                  <div class="d-grid">
-                    <button type="submit" class="btn btn-success btn-lg">📩 Nachricht senden</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </section>
+<!-- Musterangebot -->
+<div class="container my-5">
+  <div class="card shadow-lg border-0">
+    <div class="card-header bg-dark text-white">
+      📄 Musterangebot
+    </div>
+    <div class="card-body">
+      <h5 class="mb-3">FAKRO Dachfenster-Paket</h5>
+      <ul class="list-group mb-3">
+        <li class="list-group-item">3 × Klapp-Schwingfenster PPP-V MAX U5</li>
+        <li class="list-group-item">3 × Thermo-Eindeckrahmen EHU-AT</li>
+        <li class="list-group-item">3 × Folienanschluss-XDP-SET</li>
+        <li class="list-group-item">3 × Netzmarkisen AMZ Solar</li>
+        <li class="list-group-item">2 × Fernbedienungen ZRH12</li>
+      </ul>
+      <p>BAFA-förderfähig – Uw = 1,0 W/m²K</p>
+      <div class="table-responsive mb-3">
+        <table class="table table-bordered">
+          <tbody>
+            <tr>
+              <th>Gesamtpreis (inkl. Rabatt)</th>
+              <td><strong>8.262,87 €</strong></td>
+            </tr>
+            <tr>
+              <th>Förderfähiger Betrag</th>
+              <td>7.792,66 €</td>
+            </tr>
+            <tr class="table-success">
+              <th>Preis nach Förderung*</th>
+              <td><strong>7.093,97 €</strong></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <p class="text-muted">*BAFA-Antragstellung kostenlos</p>
+      <a href="#kontakt" class="btn btn-success btn-lg">📩 Angebot anfragen</a>
+    </div>
+  </div>
+</div>
+
+<!-- Kontakt -->
+<section id="kontakt" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-4">Kontakt & Kostenloses Aufmaß</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <form action="send.php" method="post" class="p-4 border rounded bg-white shadow-sm">
+          <div class="mb-3">
+            <label for="name">Ihr Name *</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email">E-Mail-Adresse *</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="phone">Telefonnummer</label>
+            <input type="tel" class="form-control" id="phone" name="phone">
+          </div>
+          <div class="mb-3">
+            <label for="message">Ihre Nachricht *</label>
+            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+          </div>
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" id="privacy" required>
+            <label class="form-check-label" for="privacy">
+              Ich stimme der <a href="datenschutz.html" target="_blank">Datenschutzerklärung</a> zu.
+            </label>
+          </div>
+          <button type="submit" class="btn btn-success btn-lg w-100">📩 Nachricht senden</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Footer -->
 <footer class="bg-dark text-light py-4 mt-5">
-  <div class="container">
-    <div class="row">
-
-      <!-- Firmenname / Logo -->
-      <div class="col-md-6 mb-3 mb-md-0">
-        <h5 class="mb-2">Alexander Krisch</h5>
-        <p class="mb-0">Ich bin Ihr regionaler Vertriebspartner in Sachsen und Sachsen-Anhalt.</p>
-<br>
-<a href="impressum.html" class="badge badge-primary">Impressum</a>
-<a href="datenschutz.html" class="badge badge-dark">Datenschutzerklärung</a>
-      </div>
-
-      <!-- Kontakt -->
-      <div class="col-md-6">
-        <h5 class="mb-2">Kontakt</h5>
-        <p class="mb-0">Einsteinstr. 39-41
-68169 Mannheim </p>
-        <p class="mb-0">📍 Kronmat GmbH </p>
-        <p class="mb-0">📞 +4915123138079</p>
-        <p class="mb-0">✉️ alexander.krisch@kronmat.de</p>
-      </div>
-
-    </div>
-
-    <!-- Copyright -->
-    <div class="text-center mt-4 border-top pt-3" style="font-size: 0.9rem;">
-      &copy; <span id="year"></span> Alexander Krisch. Alle Rechte vorbehalten.
-    </div>
+  <div class="container text-center">
+    <p>Alexander Krisch – Ihr Vertriebspartner in Sachsen</p>
+    <p>📞 +49 151 23138079 | ✉️ alexander.krisch@kronmat.de</p>
+    <a href="impressum.html" class="text-white me-3">Impressum</a>
+    <a href="datenschutz.html" class="text-white">Datenschutzerklärung</a>
+    <p class="mt-3 mb-0">&copy; <span id="year"></span> Alexander Krisch</p>
   </div>
 </footer>
 
-<!-- Jahr automatisch -->
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
-  </body>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
