--- a/datenschutz.html
+++ b/datenschutz.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Impressum - Dachfenster Sachsen</title>
-  <meta name="description" content="Impressum von Dachfenster Sachsen – Ihr Experte für den Austausch und die Montage von Fakro Dachfenstern in Sachsen.">
+  <title>Datenschutzerklärung - Dachfenster Sachsen</title>
+  <meta name="description" content="Datenschutzerklärung von Dachfenster Sachsen – Informationen zum Umgang mit personenbezogenen Daten, Cookies und Datenschutzrechten.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .whatsapp-button {
@@ -41,16 +41,33 @@
 </header>
 
 <!-- Hauptinhalt -->
-<main class="container my-5">
-  <div class="text-center mb-4">
-    <img src="2.jpg" class="img-fluid rounded shadow-sm" alt="Dachfenster Beispielbild">
-  </div>
+<div class="container my-5">
 
-  <h1 class="mb-4">Impressum</h1>
+  <h1 class="mb-4">Datenschutzerklärung</h1>
+  <p>Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Personenbezogene Daten werden vertraulich und entsprechend den gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung behandelt.</p>
+
+  <h3>1. Verantwortlicher</h3>
   <p><strong>Alexander Krisch</strong><br>
      Johna Baildona 22b/14<br>
-     40-115 Kattowitz, Polen
+     40-115 Kattowitz, Polen<br>
+     📞 +49 1512 3138079<br>
+     ✉️ alexander.krisch@kronmat.de
   </p>
+
+  <h3>2. Erhebung und Speicherung personenbezogener Daten</h3>
+  <p>Wir erheben personenbezogene Daten, wenn Sie uns diese freiwillig mitteilen, z. B. über E-Mail, Telefon oder unser Kontaktformular. Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage genutzt.</p>
+
+  <h3>3. Cookies</h3>
+  <p>Unsere Website verwendet Cookies, um die Benutzerfreundlichkeit zu verbessern. Sie können die Speicherung von Cookies in Ihrem Browser deaktivieren, wodurch jedoch die Funktionalität der Website eingeschränkt sein kann.</p>
+
+  <h3>4. Weitergabe von Daten</h3>
+  <p>Eine Weitergabe Ihrer Daten an Dritte erfolgt nur, wenn dies gesetzlich vorgeschrieben ist oder Sie ausdrücklich zugestimmt haben.</p>
+
+  <h3>5. Ihre Rechte</h3>
+  <p>Sie haben jederzeit das Recht auf Auskunft, Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer personenbezogenen Daten sowie ein Recht auf Datenübertragbarkeit.</p>
+
+  <h3>6. Kontakt</h3>
+  <p>Wenn Sie Fragen zum Datenschutz haben, wenden Sie sich bitte direkt an uns über die oben angegebenen Kontaktdaten.</p>
 
   <hr class="my-5">
 
@@ -60,7 +77,8 @@
       ⬅ Zurück zur Hauptseite
     </a>
   </div>
-</main>
+
+</div>
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 mt-5">
